[package]
name = "kxtj3-1057"
description = "An embedded-hal driver for the KXTJ3-1057 accelerometer that implements the generic accelerometer trait"
version = "0.2.0"
license = "Apache-2.0 OR MIT"
authors = ["Pejman Ghandehari <pejman.ghd@gmail.com>"]
keywords = ["embedded-hal-driver", "accelerometer"]
repository = "https://github.com/p3zhy/kxtj3-1057"
edition = "2021"


[dependencies]
accelerometer = "~0.12"
embedded-hal = "~0.2"
num_enum = { version = "~0.5", default-features = false }

[dev-dependencies]
esp-idf-sys = "0.31.11"
esp-idf-hal = "0.39.3"