[package]
name = "kxtj3-1057"
description = "An embedded-hal driver for the KXTJ3-1057 accelerometer that implements the generic accelerometer trait"
version = "0.3.0"
license = "Apache-2.0 OR MIT"
authors = ["Pejman Ghandehari <pejman.ghd@gmail.com>"]
keywords = ["embedded-hal-driver", "accelerometer"]
repository = "https://github.com/p3zhy/kxtj3-1057"
edition = "2021"


[dependencies]
accelerometer = "~0.12"
embedded-hal = "1.0.0"
num_enum = { version = "~0.5", default-features = false }

[dev-dependencies]
esp-idf-svc = { version = "0.48.0", default-features = false }
